components/rancher-ui/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: rancher-websecure
  namespace: rancher-app
  labels:
    app.kubernetes.io/instance: rancher
    app.kubernetes.io/name: rancher
  annotations:
    gethomepage.dev/href: "https://rancher.synlo.duckdns.org"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Ingress
    gethomepage.dev/icon: rancher.png
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`rancher.synlo.duckdns.org`)
      kind: Rule
      services:
        - name: rancher
          port: 80
  tls:
    certResolver: letsencrypt
